# revm-router-simulator

./: .1_watched.json  .42161_watched.json  .env.example  .gitignore  Cargo.toml  run.sh
src/: cannonical.rs  config.rs  lib.rs  main.rs  simulation.rs
