[package]
name = "slot0-simulator"
version = "0.1.0"
edition = "2021"
authors = ["Jan Demidov"]
license = "MIT"
description = "A small app designed to allow you to simulate transactions for anything that requires a some token setup. Like balances / approvals."

[dependencies]
# http
warp = "0.3"
tokio = { version = "1.40.0", features = ["tracing", "full"] }
revm = { version = "14.0.2", features = ["memory_limit", "serde"] }
dashmap = "6.1.0"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# bytes
bytes = "1.2.1"

# env, logs, errors
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.4"
eyre = "0.6"
chrono = "0.4.38"
tokio-stream = "0.1.15"
async-fs = "2.1.2"

alloy = { version = "0.4", features = ["full", "provider-debug-api"] }
alloy-provider = { version = "0.4", features = ["trace-api"] }
futures = "0.3.31"

